<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="299dp"
        android:layout_height="333dp"
        android:layout_marginBottom="94dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/carton2"
        app:layout_constraintBottom_toTopOf="@+id/t1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/carton4" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/aladin"
        android:orientation="vertical"
        android:shadowColor="#090909"
        android:text="@string/stay_at_home"
        android:textColor="#111112"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#050505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="203dp"
        android:layout_height="120dp"
        android:layout_marginTop="494dp"
        android:layout_marginBottom="124dp"
        android:ellipsize="middle"
        android:fontFamily="@font/aladin"
        android:lineSpacingExtra="14sp"
        android:orientation="vertical"
        android:text="@string/stcov"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#111112"
        android:textSize="85sp"
        android:textStyle="bold"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>